--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,7 @@ tenacity>=9.1.2
 git+https://github.com/elliottech/lighter-python.git@d0009799970aad54ebb940aa3dc90cbc00028c54
 
 # Extended exchange SDK
-x10-python-trading-starknet
+x10-python-trading-starknet==0.0.11
+
+# grvt
+grvt-pysdk==0.2.1
